# cli_autocad_manager

./: .gitignore  Cargo.toml
src/: config.rs  main.rs
src/controllers/: aggregate.rs  check.rs  collect.rs  collection.rs  mod.rs  parts.rs
src/controllers/manage_database/: commit.rs  convert.rs  mod.rs  show.rs  stage.rs
src/controllers/parts_table/: aggregate.rs  batch_processing.rs  mod.rs
src/models/: aggregate_csv.rs  config.rs  csv_database.rs  mod.rs  yaml_parts_master.rs
