[package]
name = "drawing_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
anyhow = "1.0.75"
serde = { version = "1.0.214", features = ["derive"] }

glob = "0.3"
encoding_rs = "0.8"
calamine = "0.26.1"


csv = "1.1"
encoding_rs_io = "0.1.7"


[[bin]]
name = "drm"
path = "src/main.rs"
